src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_CompoundEventHandler.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>	
		<Button>
            <Button.Click>
                OnClick
            </Button.Click>
        </Button>
</DockPanel>

</Page>
